--- a/Unitienda/Info.plist
+++ b/Unitienda/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>ServiceLocalURL</key>
+	<string>http://127.0.0.1:82/</string>
+	<key>ServiceURL</key>
+	<string>http://www.flyinc.co</string>
 	<key>UIStatusBarHidden</key>
 	<false/>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
